tests/front_end/input/type_errors/variable_create.wl
//E<3:5>: Cannot assign char to variable of type int
int main() {
    int a = 'a';
    return 0;
}
